# anchorite

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  prototype_md.py  pyproject.toml
.github/workflows/: lint.yaml  release.yaml
docs/source/: api.rst  conf.py  index.rst  md_association.md  readme.md
src/anchorite/: __init__.py  anchors.py  bbox_alignment.py  document.py  markdown.py  md_association.py  md_segments.py  orchestrator.py  providers.py  range_ops.py  types.py
tests/: test_anchorite.py  test_bbox_alignment.py  test_markdown.py  test_ocr_annotation.py  test_ocr_nesting.py  test_range_ops.py  test_regression.py
tests/fixtures/: hubble_anchors.json  hubble_golden.md
