[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anchorite"
version = "0.2.0"
authors = [
    { name = "Tobias Sargeant", email = "tobias.sargeant@gmail.com" },
]
description = "Spatial text alignment and resolution for document OCR"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "seq-smith>=0.5.1",
    "pypdfium2",
    "fsspec",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 120
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
select = ["A", "B", "C",  "E", "F", "G", "I", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]
ignore = [
    "ANN101",
    "PD011",
    "PLC0415",
    "PLR0913",
]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "FBT", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

[tool.ruff.lint.isort]
known-first-party = ["anchorite"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "S102",
    "PLR2004",
    "SLF001"
]

[tool.mypy]
python_version = "3.11"
